--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -123,18 +123,18 @@ phases:
 
   steps:
 
-  - script: |
-       call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Enterprise\\Common7\\Tools\\VsDevCmd.bat"
-       sn -Vr *,31bf3856ad364e35
-    displayName: 'Disable strong name validation'
-
-  - script: |
-       choco install -y squid
-    displayName: 'Install Squid'
-
-  - script: |
-       choco install -y netfx-4.5.2-devpack
-    displayName: 'Install .NET 4.5.2 Targetting Pack'
+  #  - script: |
+  #       call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Enterprise\\Common7\\Tools\\VsDevCmd.bat"
+  #       sn -Vr *,31bf3856ad364e35
+  #    displayName: 'Disable strong name validation'
+  #
+  #  - script: |
+  #       choco install -y squid
+  #    displayName: 'Install Squid'
+  #
+  #  - script: |
+  #       choco install -y netfx-4.5.2-devpack
+  #    displayName: 'Install .NET 4.5.2 Targetting Pack'
 
   - powershell: ./vsts/manual_checkout.ps1
     displayName: 'GIT checkout'
