set source location

--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -143,7 +143,9 @@ phases:
     displayName: 'Install .NET 4.5.2 Targeting Pack'
     condition: eq(coalesce(variables.release, False), False) # TEMP
 
-  - powershell: ./vsts/manual_checkout.ps1
+  - powershell: |
+      Set-Location $(Build.SourcesDirectory)
+      ./vsts/manual_checkout.ps1
     displayName: 'GIT checkout'
     condition: always()
     env:
