--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -179,40 +179,27 @@ phases:
   #    env:
   #      COMMIT_FROM: $(COMMIT_FROM)
 
-  - powershell: |
-      tree /f /a
-      Set-Location $(Build.SourcesDirectory)
-      Write-Host "FOO" + $(Build.SourcesDirectory)
-      tree /f /a
-      Set-Location $(Build.StagingDirectory)
-      Write-Host "FOO" + $(Build.StagingDirectory)
-      tree /f /a
-      Set-Location $(System.ArtifactsDirectory)
-      Write-Host "FOO" + $(System.ArtifactsDirectory)
-      tree /f /a
-
-      #.\build.ps1 -clean -configuration Debug
-    displayName: build.ps1 -clean -configuration Debug
+  - powershell: .\build.ps1 -clean -configuration Debug
+    displayName: Test Debug Build
     condition: always()
 
   - powershell: |
-      # comments transliterate in yaml and powershell
-      . $(Build.StagingDirectory)/build-tools/csharp/new/SignTools.ps1
+      # powershell and yaml comments transliterate
+      . $(Build.StagingDirectory)/scripts/csharp/new/SignTools.ps1
       md $env:ESRP_LOG_DIR
       md $env:AZURE_IOT_LOCALPACKAGES
       Set-Location $(Build.SourcesDirectory)
       $(Build.SourcesDirectory)/build.ps1 -configuration Release -sign -verbosity d
-    displayName: 'Build, Package, Sign'
+    displayName: Release Build
     condition: eq(coalesce(variables.release, False), True) # Release
     env:
-        ESRP_AUTH_CONFIG: $(Build.StagingDirectory)/build-tools/csharp/new/json/Auth.json
-        ESRP_POLICY_CONFIG: $(Build.StagingDirectory)/build-tools/csharp/new/json/Policy.json
-        ESRP_INPUT_JSON_DIR: $(Build.StagingDirectory)/build-tools/csharp/new/json
-        ESRP_LOG_DIR: $(Build.StagingDirectory)/build-tools/csharp/new/logs
-        AZURE_IOT_LOCALPACKAGES: $(Build.StagingDirectory)/build-tools/csharp/nuget_local
+        ESRP_AUTH_CONFIG: $(Build.StagingDirectory)/scripts/csharp/new/json/Auth.json
+        ESRP_POLICY_CONFIG: $(Build.StagingDirectory)/scripts/csharp/new/json/Policy.json
+        ESRP_INPUT_JSON_DIR: $(Build.StagingDirectory)/scripts/csharp/new/json
+        ESRP_LOG_DIR: $(Build.StagingDirectory)/scripts/csharp/new/logs
+        AZURE_IOT_LOCALPACKAGES: $(Build.StagingDirectory)/scripts/csharp/nuget_local
 
-  - powershell: |
-      Write-Host "Hola Mundo"
+  - powershell: Write-Host "Hola Mundo"
     displayName: Standard Build
     condition: eq(coalesce(variables.release, False), False)
     env:
