--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -4,11 +4,10 @@ resources:
   clean: true
 phases:
 
-### Linux build ###
+  ### Linux build ###
 - phase: LINUX
   displayName: Linux
-
-  condition: succeeded()
+  condition: eq(coalesce(variables.release, False), False) # TEMP
   queue:
     name: Hosted Ubuntu 1604
     timeoutInMinutes: 180
@@ -116,14 +115,91 @@ phases:
 
     condition: always()
 
-### Windows build ###
+  ### Windows build ###
+
+- phase: Release
+  displayName: Windows Release Build
+  condition: eq(coalesce(variables.release, False), True) # Release
+  queue:
+    name: Hosted VS2017
+    timeoutInMinutes: 180
+  steps:
+
+  - checkout: self  # self represents the repo where the initial Pipelines YAML file was found
+    persistCredentials: 'true'  # set to 'true' to leave the OAuth token in the Git config after the initial fetch
+    clean: true
+
+  - task: EsrpClientTool@1
+  
+  - task: DownloadBuildArtifacts@0
+    inputs:
+      buildType: 'specific'
+      project: 'f9b79625-2860-4d92-a4ee-57b03fabfd10' # azure-iot-sdks
+      pipeline: $(scriptspipeline) # scripts pipeline
+      buildVersionToDownload: 'latest'
+      downloadType: 'single'
+      downloadPath: '$(System.ArtifactsDirectory)\scripts'
+      artifactName: 'csharp'
+
+  - task: DownloadSecureFile@1
+    displayName: 'Download secure file - iothubsdksign-auth-base64.pfx'
+    inputs:
+      secureFile: 'iothubsdksign-auth-base64.pfx'
+
+  - task: DownloadSecureFile@1
+    displayName: 'Download secure file - iothubsdksign-req-base64.pfx'
+    inputs:
+      secureFile: 'iothubsdksign-req-base64.pfx'
+
+  - task: PowerShell@2
+    inputs:
+      filePath: '$(Build.StagingDirectory)/scripts/csharp/vsts/install-signing-certificates.ps1'
+    displayName: 'Install Signing Certificates'
+    env:
+        certpwd: $(certpassphrase)
+
+  - script: |
+       call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Enterprise\\Common7\\Tools\\VsDevCmd.bat"
+       sn -Vr *,31bf3856ad364e35
+    displayName: 'Disable strong name validation'
+    condition: eq(coalesce(variables.release, False), False) # TEMP
+
+  - script: |
+       choco install -y squid
+    displayName: 'Install Squid'
+    condition: eq(coalesce(variables.release, False), False) # TEMP
+
+  - script: |
+       choco install -y netfx-4.5.2-devpack
+    displayName: 'Install .NET 4.5.2 Targeting Pack'
+    condition: eq(coalesce(variables.release, False), False) # TEMP
+
+  - powershell: .\build.ps1 -clean -configuration Debug
+    displayName: Test Debug Build
+    condition: eq(coalesce(variables.release, False), False) # TEMP
+
+  - powershell: |
+      . $(Build.StagingDirectory)/scripts/csharp/new/SignTools.ps1
+
+      md $env:ESRP_LOG_DIR
+      md $env:AZURE_IOT_LOCALPACKAGES
+      Set-Location $(Build.SourcesDirectory)
+
+      $(Build.SourcesDirectory)/build.ps1 -configuration Release -sign -e2etests -verbosity d
+    displayName: Signed Build
+    condition: eq(coalesce(variables.release, False), True) # Release
+    env:
+        ESRP_AUTH_CONFIG: $(Build.StagingDirectory)/scripts/csharp/new/json/Auth.json
+        ESRP_POLICY_CONFIG: $(Build.StagingDirectory)/scripts/csharp/new/json/Policy.json
+        ESRP_INPUT_JSON_DIR: $(Build.StagingDirectory)/scripts/csharp/new/json
+        ESRP_LOG_DIR: $(Build.StagingDirectory)/scripts/csharp/new/logs
+        AZURE_IOT_LOCALPACKAGES: $(Build.StagingDirectory)/scripts/csharp/nuget_local
 
 - phase: WINDOWS
   displayName: Windows
-# Uncomment to serialize builds:
-#  dependsOn: LINUX
-
-  condition: succeeded()
+  # Uncomment to serialize builds:
+  #  dependsOn: LINUX
+  condition: eq(coalesce(variables.release, False), False) # TEMP
   queue:
     name: Hosted VS2017
     timeoutInMinutes: 180
@@ -242,11 +318,11 @@ phases:
 
     condition: always()
 
-### WINDOWS Analyzers ###
+  ### WINDOWS Analyzers ###
+
 - phase: Analyzers
   displayName: Analyzers
-
-  condition: succeeded()
+  condition: eq(coalesce(variables.release, False), False) # TEMP
   queue:
     name: Hosted VS2017
     timeoutInMinutes: 60
@@ -344,12 +420,11 @@ phases:
     # TODO #181 Enable post analysis to break builds after all above items are enabled.
     enabled: false
 
-# END: SDL and Compliance tasks #
+  # END: SDL and Compliance tasks #
 
 - phase: NETMF
   displayName: NetMF
-
-  condition: succeeded()
+  condition: eq(coalesce(variables.release, False), False) # TEMP
   queue:
     name: win
     timeoutInMinutes: 1
@@ -367,8 +442,7 @@ phases:
 
 - phase: DEVEXP
   displayName: csharp-deviceexplorer
-
-  condition: succeeded()
+  condition: eq(coalesce(variables.release, False), False) # TEMP
   queue:
     name: win
     timeoutInMinutes: 15
@@ -384,7 +458,7 @@ phases:
        vsts/windows_csharp_deviceexplorer.cmd
     displayName: build
 
-# BEGIN: SDL and Compliance tasks #
+  # BEGIN: SDL and Compliance tasks #
 
   - task: ComponentGovernanceComponentDetection@0
     displayName: 'Component Detection'
