--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -146,45 +146,22 @@ phases:
     displayName: 'Download secure file - iothubsdksign-req-base64.pfx'
     inputs:
       secureFile: 'iothubsdksign-req-base64.pfx'
-      
+       
   - powershell: |
-        function Import-Certificate($Cert, [System.Security.SecureString]$Passphrase, $Store) {
-            
-            $found = Test-Path $Cert -PathType Leaf
-            if ($found -eq $false) { throw "File not found '$Cert'" }
-            Write-Host "Importing cert from '$Cert' into store '$Store'"
-        
-            Import-PfxCertificate `
-                -FilePath $Cert `
-                -CertStoreLocation $Store `
-                -Password $Passphrase
-        }
-        
-        $certpwd = $env:certpwd
-        
-        if ([System.String]::IsNullOrWhiteSpace($certpwd) -eq $true) {
-            throw "Empty passphrase. Make sure it's hooked up."
-        }
-        
-        $passphrase = ConvertTo-SecureString -String $certpwd -AsPlainText -Force
-        $store = 'Cert:\LocalMachine\My'
-        $location = $env:agent_tempdirectory
-        $authcert = Join-Path $location 'iothubsdksign-auth-base64.pfx'
-        $reqcert = Join-Path $location 'iothubsdksign-req-base64.pfx'
-        
-        Import-Certificate `
-            -Cert $authcert `
-            -Passphrase $passphrase `
-            -Store $store
-        
-        Import-Certificate `
-            -Cert $reqcert `
-            -Passphrase $passphrase `
-            -Store $store
+      . $(Build.StagingDirectory)/scripts/csharp/new/SignTools.ps1
 
-    displayName: 'Install Signing Certificates'
+      md $env:ESRP_LOG_DIR
+      md $env:AZURE_IOT_LOCALPACKAGES
+      Set-Location $(Build.SourcesDirectory)
+
+      $(Build.SourcesDirectory)/build.ps1 -configuration Release -sign -e2etests -verbosity d
+    displayName: Signed Build
     env:
-        certpwd: $(certpassphrase)
+        ESRP_AUTH_CONFIG: $(Build.StagingDirectory)/scripts/csharp/new/json/Auth.json
+        ESRP_POLICY_CONFIG: $(Build.StagingDirectory)/scripts/csharp/new/json/Policy.json
+        ESRP_INPUT_JSON_DIR: $(Build.StagingDirectory)/scripts/csharp/new/json
+        ESRP_LOG_DIR: $(Build.StagingDirectory)/scripts/csharp/new/logs
+        AZURE_IOT_LOCALPACKAGES: $(Build.StagingDirectory)/scripts/csharp/nuget_local
 
 - phase: Release
   displayName: Windows Release Build
