--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -147,21 +147,12 @@ phases:
     inputs:
       secureFile: 'iothubsdksign-req-base64.pfx'
        
-  - powershell: |
-      . $(Build.StagingDirectory)/scripts/csharp/new/SignTools.ps1
-
-      md $env:ESRP_LOG_DIR
-      md $env:AZURE_IOT_LOCALPACKAGES
-      Set-Location $(Build.SourcesDirectory)
-
-      $(Build.SourcesDirectory)/build.ps1 -configuration Release -sign -e2etests -verbosity d
-    displayName: Signed Build
+  - task: PowerShell@2
+    inputs:
+      filePath: '$(Build.StagingDirectory)/scripts/csharp/vsts/install-signing-certificates.ps1'
+    displayName: 'Install Signing Certificates'
     env:
-        ESRP_AUTH_CONFIG: $(Build.StagingDirectory)/scripts/csharp/new/json/Auth.json
-        ESRP_POLICY_CONFIG: $(Build.StagingDirectory)/scripts/csharp/new/json/Policy.json
-        ESRP_INPUT_JSON_DIR: $(Build.StagingDirectory)/scripts/csharp/new/json
-        ESRP_LOG_DIR: $(Build.StagingDirectory)/scripts/csharp/new/logs
-        AZURE_IOT_LOCALPACKAGES: $(Build.StagingDirectory)/scripts/csharp/nuget_local
+        certpwd: $(certpassphrase)
 
 - phase: Release
   displayName: Windows Release Build
