--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -146,13 +146,71 @@ phases:
     displayName: 'Download secure file - iothubsdksign-req-base64.pfx'
     inputs:
       secureFile: 'iothubsdksign-req-base64.pfx'
-       
+
   - task: PowerShell@2
     inputs:
       filePath: '$(Build.StagingDirectory)/scripts/csharp/vsts/install-signing-certificates.ps1'
     displayName: 'Install Signing Certificates'
     env:
         certpwd: $(certpassphrase)
+
+  - script: |
+       call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Enterprise\\Common7\\Tools\\VsDevCmd.bat"
+       sn -Vr *,31bf3856ad364e35
+    displayName: 'Disable strong name validation'
+
+  - script: |
+       choco install -y squid
+    displayName: 'Install Squid'
+
+  - script: |
+       choco install -y netfx-4.5.2-devpack
+    displayName: 'Install .NET 4.5.2 Targeting Pack'
+
+  - powershell: .\build.ps1 -clean -configuration Debug
+    displayName: Test Debug Build
+
+  - powershell: |
+      . $(Build.StagingDirectory)/scripts/csharp/new/SignTools.ps1
+
+      md $env:ESRP_LOG_DIR
+      md $env:AZURE_IOT_LOCALPACKAGES
+      Set-Location $(Build.SourcesDirectory)
+
+      $(Build.SourcesDirectory)/build.ps1 -configuration Release -sign -e2etests -verbosity d
+    displayName: Signed Build
+    env:
+        ESRP_AUTH_CONFIG: $(Build.StagingDirectory)/scripts/csharp/new/json/Auth.json
+        ESRP_POLICY_CONFIG: $(Build.StagingDirectory)/scripts/csharp/new/json/Policy.json
+        ESRP_INPUT_JSON_DIR: $(Build.StagingDirectory)/scripts/csharp/new/json
+        ESRP_LOG_DIR: $(Build.StagingDirectory)/scripts/csharp/new/logs
+        AZURE_IOT_LOCALPACKAGES: $(Build.StagingDirectory)/scripts/csharp/nuget_local
+        IOTHUB_CONN_STRING_CSHARP: $(IOTHUB-CONN-STRING-CSHARP)
+        IOTHUB_PFX_X509_THUMBPRINT: $(IOTHUB-PFX-X509-THUMBPRINT)
+        IOTHUB_X509_PFX_CERTIFICATE: $(IOTHUB-X509-PFX-CERTIFICATE)
+        IOTHUB_EVENTHUB_CONN_STRING_CSHARP: $(IOTHUB-EVENTHUB-CONN-STRING-CSHARP)
+        IOTHUB_EVENTHUB_COMPATIBLE_NAME: $(IOTHUB-EVENTHUB-COMPATIBLE-NAME)
+        IOTHUB_EVENTHUB_CONSUMER_GROUP: $(IOTHUB-EVENTHUB-CONSUMER-GROUP)
+        DPS_IDSCOPE: $(DPS-IDSCOPE)
+        DPS_GLOBALDEVICEENDPOINT: $(DPS-GLOBALDEVICEENDPOINT)
+        DPS_INDIVIDUALX509_PFX_CERTIFICATE: $(DPS-INDIVIDUALX509-PFX-CERTIFICATE)
+        DPS_GROUPX509_PFX_CERTIFICATE: $(DPS-GROUPX509-PFX-CERTIFICATE)
+        DPS_X509_PFX_CERTIFICATE_PASSWORD: $(DPS-X509-PFX-CERTIFICATE-PASSWORD)
+        DPS_GROUPX509_CERTIFICATE_CHAIN: $(DPS-GROUPX509-CERTIFICATE-CHAIN)
+        DPS_TPM_REGISTRATIONID: $(DPS-TPM-REGISTRATIONID)
+        DPS_TPM_DEVICEID: $(DPS-TPM-DEVICEID)
+        PROVISIONING_CONNECTION_STRING: $(PROVISIONING-CONNECTION-STRING)
+        IOTHUB_DEVICE_CONN_STRING_INVALIDCERT: $(IOTHUB-DEVICE-CONN-STRING-INVALIDCERT)
+        IOTHUB_CONN_STRING_INVALIDCERT: $(IOTHUB-CONN-STRING-INVALIDCERT)
+        DPS_GLOBALDEVICEENDPOINT_INVALIDCERT: $(DPS-GLOBALDEVICEENDPOINT-INVALIDCERT)
+        PROVISIONING_CONNECTION_STRING_INVALIDCERT: $(PROVISIONING-CONNECTION-STRING-INVALIDCERT)
+        FAR_AWAY_IOTHUB_HOSTNAME: $(FAR-AWAY-IOTHUB-HOSTNAME)
+        CUSTOM_ALLOCATION_POLICY_WEBHOOK: $(CUSTOM-ALLOCATION-POLICY-WEBHOOK)
+        IOTHUB_PROXY_SERVER_ADDRESS: 127.0.0.1:3128
+        LA_AAD_TENANT: $(LA-AAD-TENANT)
+        LA_AAD_APP_ID: $(LA-AAD-APP-ID)
+        LA_AAD_APP_CERT_BASE64: $(LA-AAD-APP-CERT-BASE64)
+        LA_WORKSPACE_ID: $(LA-WORKSPACE-ID)
 
 - phase: Release
   displayName: Windows Release Build
@@ -214,23 +272,6 @@ phases:
   - powershell: .\build.ps1 -clean -configuration Debug
     displayName: Test Debug Build
     condition: eq(coalesce(variables.release, False), False) # TEMP
-
-  - powershell: |
-      . $(Build.StagingDirectory)/scripts/csharp/new/SignTools.ps1
-
-      md $env:ESRP_LOG_DIR
-      md $env:AZURE_IOT_LOCALPACKAGES
-      Set-Location $(Build.SourcesDirectory)
-
-      $(Build.SourcesDirectory)/build.ps1 -configuration Release -sign -e2etests -verbosity d
-    displayName: Signed Build
-    condition: eq(coalesce(variables.release, False), True) # Release
-    env:
-        ESRP_AUTH_CONFIG: $(Build.StagingDirectory)/scripts/csharp/new/json/Auth.json
-        ESRP_POLICY_CONFIG: $(Build.StagingDirectory)/scripts/csharp/new/json/Policy.json
-        ESRP_INPUT_JSON_DIR: $(Build.StagingDirectory)/scripts/csharp/new/json
-        ESRP_LOG_DIR: $(Build.StagingDirectory)/scripts/csharp/new/logs
-        AZURE_IOT_LOCALPACKAGES: $(Build.StagingDirectory)/scripts/csharp/nuget_local
 
 - phase: WINDOWS
   displayName: Windows
