--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -118,7 +118,9 @@ phases:
   ### Windows build ###
 
 - phase: Phase_1
-
+  queue:
+    name: Hosted VS2017
+    timeoutInMinutes: 180
   steps:
 
   - task: EsrpClientTool@1
